# prometheus

./: README.md  docker-compose.yaml  prometheus.yml
python-service/: Dockerfile  Taskfile.yml  pyproject.toml
python-service/src/: main.py
