[tool.poetry]
name = "python-service"
version = "0.1.0"
description = ""
authors = ["Abhishek Rana <abhishekrana502@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.104.1"
prometheus-client = "0.19.0"
uvicorn = "0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
